2020-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	autocrypt: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button_press_event" widget
	signal.

	* libbalsa/autocrypt.c (autocrypt_db_dialog_run),
	(gesture_pressed_cb):

2020-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-view: Connect to "notify::has-focus" signal instead of
	"focus-out-event".

	* libbalsa/address-view.c (lbav_notify_has_focus_cb),
	(lbav_row_editing_cb):

2020-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose window: Hold a reference to identity

	It is possible for BalsaSendmsg:ident to be unreffed by the
	identity configuration editor; it is only a minor inconvenience,
	but we can make it more robust by holding a reference.

	* src/sendmsg-window.c (update_bsmsg_identity),
	  (set_identity_from_mailbox), (guess_identity_from_list),
	  (sendmsg_window_new): manage the reference;
	  (balsa_sendmsg_destroy_handler): ditto; also do not bother to
	    clear members of BalsaSendmsg, as it is about to be deallocated.

2020-05-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	autocrypt: Stop using direct access to GdkEvent structs

	Use GdkEvent getters instead of directly accessing fields.

	* libbalsa/autocrypt.c (key_button_event_press_cb):

2020-05-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-view: Stop using direct access to GdkEvent structs

	Use GdkEvent getters instead of directly accessing fields.

	* libbalsa/address-view.c (lbav_key_pressed_cb),
	(lbav_selection_changed_cb):

2020-05-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-book and subclasses: Clean up #includes

	* libbalsa/address-book-extern.c:
	* libbalsa/address-book-extern.h:
	* libbalsa/address-book-gpe.c:
	* libbalsa/address-book-gpe.h:
	* libbalsa/address-book-ldap.c:
	* libbalsa/address-book-ldap.h:
	* libbalsa/address-book-ldif.c:
	* libbalsa/address-book-osmo.c:
	* libbalsa/address-book-osmo.h: