@@ -1,3 +1,13 @@
+2020-05-31  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	ab-main: Connect to the "key-pressed" signal of a
+	GtkEventControllerKey instead of the "key-press-event" widget
+	signal.
+
+	Also drop a pointless "delete-event" handler.
+
+	* src/ab-main.c (ew_key_pressed), (bab_window_new), (main):
+
 2020-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	autocrypt: Connect to the "pressed" signal of a
